// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direction Filter method returns the filter menu returns the proper component 1`] = `
<Connect(CheckboxMenu)
  buttonType="columnFilter"
  className="direction"
  menuType="Direction"
  selectionType="select"
  tableType="mockTable"
  updateFilter={undefined}
>
  Direction
</Connect(CheckboxMenu)>
`;

exports[`direction Filter method returns the filter menu returns the proper component 2`] = `
<Connect(CheckboxMenu)
  buttonType="columnFilter"
  className="direction"
  menuType="Direction"
  selectionType="select"
  tableType="mockTable"
  updateFilter={[Function]}
>
  Direction
</Connect(CheckboxMenu)>
`;

exports[`direction table column Cell returns the value wrapped in a span 1`] = `
Object {
  "lastCalledWith": [Function],
  "not": Object {
    "lastCalledWith": [Function],
    "toBe": [Function],
    "toBeCalled": [Function],
    "toBeCalledWith": [Function],
    "toBeCloseTo": [Function],
    "toBeDefined": [Function],
    "toBeFalsy": [Function],
    "toBeGreaterThan": [Function],
    "toBeGreaterThanOrEqual": [Function],
    "toBeInstanceOf": [Function],
    "toBeLessThan": [Function],
    "toBeLessThanOrEqual": [Function],
    "toBeNaN": [Function],
    "toBeNull": [Function],
    "toBeTruthy": [Function],
    "toBeUndefined": [Function],
    "toContain": [Function],
    "toContainEqual": [Function],
    "toEqual": [Function],
    "toHaveBeenCalled": [Function],
    "toHaveBeenCalledTimes": [Function],
    "toHaveBeenCalledWith": [Function],
    "toHaveBeenLastCalledWith": [Function],
    "toHaveLength": [Function],
    "toHaveProperty": [Function],
    "toMatch": [Function],
    "toMatchObject": [Function],
    "toMatchSnapshot": [Function],
    "toThrow": [Function],
    "toThrowError": [Function],
    "toThrowErrorMatchingSnapshot": [Function],
  },
  "rejects": Object {
    "lastCalledWith": [Function],
    "not": Object {
      "lastCalledWith": [Function],
      "toBe": [Function],
      "toBeCalled": [Function],
      "toBeCalledWith": [Function],
      "toBeCloseTo": [Function],
      "toBeDefined": [Function],
      "toBeFalsy": [Function],
      "toBeGreaterThan": [Function],
      "toBeGreaterThanOrEqual": [Function],
      "toBeInstanceOf": [Function],
      "toBeLessThan": [Function],
      "toBeLessThanOrEqual": [Function],
      "toBeNaN": [Function],
      "toBeNull": [Function],
      "toBeTruthy": [Function],
      "toBeUndefined": [Function],
      "toContain": [Function],
      "toContainEqual": [Function],
      "toEqual": [Function],
      "toHaveBeenCalled": [Function],
      "toHaveBeenCalledTimes": [Function],
      "toHaveBeenCalledWith": [Function],
      "toHaveBeenLastCalledWith": [Function],
      "toHaveLength": [Function],
      "toHaveProperty": [Function],
      "toMatch": [Function],
      "toMatchObject": [Function],
      "toMatchSnapshot": [Function],
      "toThrow": [Function],
      "toThrowError": [Function],
      "toThrowErrorMatchingSnapshot": [Function],
    },
    "toBe": [Function],
    "toBeCalled": [Function],
    "toBeCalledWith": [Function],
    "toBeCloseTo": [Function],
    "toBeDefined": [Function],
    "toBeFalsy": [Function],
    "toBeGreaterThan": [Function],
    "toBeGreaterThanOrEqual": [Function],
    "toBeInstanceOf": [Function],
    "toBeLessThan": [Function],
    "toBeLessThanOrEqual": [Function],
    "toBeNaN": [Function],
    "toBeNull": [Function],
    "toBeTruthy": [Function],
    "toBeUndefined": [Function],
    "toContain": [Function],
    "toContainEqual": [Function],
    "toEqual": [Function],
    "toHaveBeenCalled": [Function],
    "toHaveBeenCalledTimes": [Function],
    "toHaveBeenCalledWith": [Function],
    "toHaveBeenLastCalledWith": [Function],
    "toHaveLength": [Function],
    "toHaveProperty": [Function],
    "toMatch": [Function],
    "toMatchObject": [Function],
    "toMatchSnapshot": [Function],
    "toThrow": [Function],
    "toThrowError": [Function],
    "toThrowErrorMatchingSnapshot": [Function],
  },
  "resolves": Object {
    "lastCalledWith": [Function],
    "not": Object {
      "lastCalledWith": [Function],
      "toBe": [Function],
      "toBeCalled": [Function],
      "toBeCalledWith": [Function],
      "toBeCloseTo": [Function],
      "toBeDefined": [Function],
      "toBeFalsy": [Function],
      "toBeGreaterThan": [Function],
      "toBeGreaterThanOrEqual": [Function],
      "toBeInstanceOf": [Function],
      "toBeLessThan": [Function],
      "toBeLessThanOrEqual": [Function],
      "toBeNaN": [Function],
      "toBeNull": [Function],
      "toBeTruthy": [Function],
      "toBeUndefined": [Function],
      "toContain": [Function],
      "toContainEqual": [Function],
      "toEqual": [Function],
      "toHaveBeenCalled": [Function],
      "toHaveBeenCalledTimes": [Function],
      "toHaveBeenCalledWith": [Function],
      "toHaveBeenLastCalledWith": [Function],
      "toHaveLength": [Function],
      "toHaveProperty": [Function],
      "toMatch": [Function],
      "toMatchObject": [Function],
      "toMatchSnapshot": [Function],
      "toThrow": [Function],
      "toThrowError": [Function],
      "toThrowErrorMatchingSnapshot": [Function],
    },
    "toBe": [Function],
    "toBeCalled": [Function],
    "toBeCalledWith": [Function],
    "toBeCloseTo": [Function],
    "toBeDefined": [Function],
    "toBeFalsy": [Function],
    "toBeGreaterThan": [Function],
    "toBeGreaterThanOrEqual": [Function],
    "toBeInstanceOf": [Function],
    "toBeLessThan": [Function],
    "toBeLessThanOrEqual": [Function],
    "toBeNaN": [Function],
    "toBeNull": [Function],
    "toBeTruthy": [Function],
    "toBeUndefined": [Function],
    "toContain": [Function],
    "toContainEqual": [Function],
    "toEqual": [Function],
    "toHaveBeenCalled": [Function],
    "toHaveBeenCalledTimes": [Function],
    "toHaveBeenCalledWith": [Function],
    "toHaveBeenLastCalledWith": [Function],
    "toHaveLength": [Function],
    "toHaveProperty": [Function],
    "toMatch": [Function],
    "toMatchObject": [Function],
    "toMatchSnapshot": [Function],
    "toThrow": [Function],
    "toThrowError": [Function],
    "toThrowErrorMatchingSnapshot": [Function],
  },
  "toBe": [Function],
  "toBeCalled": [Function],
  "toBeCalledWith": [Function],
  "toBeCloseTo": [Function],
  "toBeDefined": [Function],
  "toBeFalsy": [Function],
  "toBeGreaterThan": [Function],
  "toBeGreaterThanOrEqual": [Function],
  "toBeInstanceOf": [Function],
  "toBeLessThan": [Function],
  "toBeLessThanOrEqual": [Function],
  "toBeNaN": [Function],
  "toBeNull": [Function],
  "toBeTruthy": [Function],
  "toBeUndefined": [Function],
  "toContain": [Function],
  "toContainEqual": [Function],
  "toEqual": [Function],
  "toHaveBeenCalled": [Function],
  "toHaveBeenCalledTimes": [Function],
  "toHaveBeenCalledWith": [Function],
  "toHaveBeenLastCalledWith": [Function],
  "toHaveLength": [Function],
  "toHaveProperty": [Function],
  "toMatch": [Function],
  "toMatchObject": [Function],
  "toMatchSnapshot": [Function],
  "toThrow": [Function],
  "toThrowError": [Function],
  "toThrowErrorMatchingSnapshot": [Function],
}
`;

exports[`direction table column function returns correct object 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Direction",
  "accessor": "direction",
  "filterMethod": [Function],
  "id": "direction",
  "show": "All",
  "width": 140,
}
`;
